--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <version>1.2.8</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.38</version>
+        </dependency>
     </dependencies>
 
 </project>
